// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / AccordionItem Controlled 1`] = `
Array [
  .c0 {
  margin-bottom: 16px;
  background-color: transparent;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -8px;
  margin-right: -8px;
}

.c1 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c1 > *:not(:first-child) {
  padding-top: 0;
}

.c2 {
  box-sizing: border-box;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #336BFF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c3,
.c3[type='button'],
.c3[type='reset'],
.c3[type='submit'] {
  -webkit-appearance: button;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c3:hover {
  background-color: #2650BF;
}

.c3:active {
  background-color: #1F4099;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <button
          className="NormalizedButton__Button-sc-ey7f5x-0 c3"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c4 "
            >
              Toggle first
            </span>
          </span>
        </button>
      </div>
      <div
        className="c2"
      >
        <button
          className="NormalizedButton__Button-sc-ey7f5x-0 c3"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c4 "
            >
              Toggle second
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>,
  .c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #336BFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  outline: 1px solid none;
  background-color: transparent;
  padding: 0px 0px 0px 0px;
}

.c1 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c3 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  margin-top: -2px;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  padding-right: 12px;
}

<div
    aria-expanded={false}
    className="c0 c1"
  >
    <h3
      className="c2"
    >
      <button
        className="c3"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      >
        Låg CO₂ risk
        <div
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="c5"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 12 12"
          >
            <path
              d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </h3>
  </div>,
  .c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #336BFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  outline: 1px solid none;
  background-color: transparent;
  padding: 0px 0px 0px 0px;
}

.c1 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c3 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  margin-top: -2px;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  padding-right: 12px;
}

<div
    aria-expanded={false}
    className="c0 c1"
  >
    <h3
      className="c2"
    >
      <button
        className="c3"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      >
        Sustainability score
        <div
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="c5"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 12 12"
          >
            <path
              d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </h3>
  </div>,
]
`;

exports[`Storyshots Molecules / AccordionItem Default Collapsed 1`] = `
.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #336BFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  outline: 1px solid none;
  background-color: transparent;
  padding: 0px 0px 0px 0px;
}

.c1 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c3 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  margin-top: -2px;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  padding-right: 12px;
}

<div
  aria-expanded={false}
  className="c0 c1"
>
  <h3
    className="c2"
  >
    <button
      className="c3"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      type="button"
    >
      Lemon drops and several cakes for two persons or more
      <div
        className="c4"
      >
        <svg
          aria-hidden="true"
          className="c5"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 12 12"
        >
          <path
            d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </button>
  </h3>
</div>
`;

exports[`Storyshots Molecules / AccordionItem Disabled 1`] = `
Array [
  .c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  outline: 1px solid none;
  background-color: transparent;
  padding: 0px 0px 0px 0px;
}

.c1 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c3 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: default;
  color: #A0A09B;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  margin-top: -2px;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  padding-right: 12px;
}

<div
    aria-expanded={false}
    className="c0 c1"
  >
    <h3
      className="c2"
    >
      <button
        className="c3"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      >
        This accordion item is disabled
        <div
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="c5"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 12 12"
          >
            <path
              d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </h3>
  </div>,
  .c5 {
  color: #A0A09B;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  outline: 1px solid none;
  background-color: transparent;
  padding: 0px 0px 0px 0px;
}

.c1 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c3 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: default;
  color: #A0A09B;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  margin-top: 0;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  padding-right: 0px;
}

.c6 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
}

<div
    aria-expanded={false}
    className="c0 c1"
  >
    <h3
      className="c2"
    >
      <button
        className="c3"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      >
        This accordion item is disabled with chevron
        <div
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="c5 c6"
            focusable="false"
            height={8}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={8}
          >
            <path
              d="M8 7.418l-4-4-4 4V4.59l4-4 4 4v2.828z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
    </h3>
  </div>,
]
`;

exports[`Storyshots Molecules / AccordionItem Expanded 1`] = `
.c6 {
  padding-left: 24px;
  padding-top: 4px;
  padding-right: 0px;
  padding-bottom: 12px;
  background-color: transparent;
}

.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #336BFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  outline: 1px solid none;
  background-color: transparent;
  padding: 0px 0px 0px 0px;
}

.c1 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c3 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  margin-top: -2px;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  padding-right: 12px;
}

<div
  aria-expanded={true}
  className="c0 c1"
>
  <h3
    className="c2"
  >
    <button
      className="c3"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      type="button"
    >
      Låg CO₂ risk
      <div
        className="c4"
      >
        <svg
          aria-hidden="true"
          className="c5"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 12 2"
        >
          <path
            d="M12.166 0v2h-12V0z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </button>
  </h3>
  <section>
    <div
      className="c6 "
    >
      <p
        className="c7"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
      </p>
    </div>
  </section>
</div>
`;

exports[`Storyshots Molecules / AccordionItem Text Only Content Is Formatted Correct 1`] = `
Array [
  .c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #336BFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  outline: 1px solid none;
  background-color: transparent;
  padding: 0px 0px 0px 0px;
}

.c1 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c3 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  margin-top: -2px;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  padding-right: 12px;
}

<div
    aria-expanded={false}
    className="c0 c1"
  >
    <h3
      className="c2"
    >
      <button
        className="c3"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      >
        Content is text only
        <div
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="c5"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 12 12"
          >
            <path
              d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </h3>
  </div>,
  .c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #336BFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  outline: 1px solid none;
  background-color: transparent;
  padding: 0px 0px 0px 0px;
}

.c1 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c3 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  margin-top: -2px;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  padding-right: 12px;
}

<div
    aria-expanded={false}
    className="c0 c1"
  >
    <h3
      className="c2"
    >
      <button
        className="c3"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      >
        Content is a component
        <div
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="c5"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 12 12"
          >
            <path
              d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </h3>
  </div>,
]
`;

exports[`Storyshots Molecules / AccordionItem With Chevron 1`] = `
.c5 {
  color: #282823;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  outline: 1px solid none;
  background-color: transparent;
  padding: 0px 0px 0px 0px;
}

.c1 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c3 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: pointer;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  margin-top: 0;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  padding-right: 0px;
}

.c6 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
}

<div
  aria-expanded={false}
  className="c0 c1"
>
  <h3
    className="c2"
  >
    <button
      className="c3"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      type="button"
    >
      How much risk are you willing to take?
      <div
        className="c4"
      >
        <svg
          aria-hidden="true"
          className="c5 c6"
          focusable="false"
          height={8}
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          width={8}
        >
          <path
            d="M8 7.418l-4-4-4 4V4.59l4-4 4 4v2.828z"
            fill="currentColor"
          />
        </svg>
      </div>
    </button>
  </h3>
</div>
`;

exports[`Storyshots Molecules / AccordionItem With Different Paddings 1`] = `
Array [
  .c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #336BFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  outline: 1px solid none;
  background-color: transparent;
  padding: 40px 40px 40px 40px;
}

.c1 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c6 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c7 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c8 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c9 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c10 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c11 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c3 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  margin-top: -2px;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  padding-right: 12px;
}

<div
    aria-expanded={false}
    className="c0 c1"
  >
    <h3
      className="c2"
    >
      <button
        className="c3"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      >
        This accordion item has a custom padding
        <div
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="c5"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 12 12"
          >
            <path
              d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </h3>
  </div>,
  .c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #336BFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c1 {
  outline: 1px solid none;
  background-color: transparent;
  padding: 0px 80px 0px 80px;
}

.c1 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c7 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c8 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c9 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c10 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c11 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c3 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  margin-top: -2px;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  padding-right: 12px;
}

<div
    aria-expanded={false}
    className="c0 c1"
  >
    <h3
      className="c2"
    >
      <button
        className="c3"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      >
        This accordion item has a custom horizontal padding
        <div
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="c5"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 12 12"
          >
            <path
              d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </h3>
  </div>,
  .c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #336BFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c7 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c1 {
  outline: 1px solid none;
  background-color: transparent;
  padding: 40px 0px 40px 0px;
}

.c1 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c8 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c9 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c10 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c11 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c3 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  margin-top: -2px;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  padding-right: 12px;
}

<div
    aria-expanded={false}
    className="c0 c1"
  >
    <h3
      className="c2"
    >
      <button
        className="c3"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      >
        This accordion item has a custom vertical padding
        <div
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="c5"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 12 12"
          >
            <path
              d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </h3>
  </div>,
  .c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #336BFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c7 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c8 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c1 {
  outline: 1px solid none;
  background-color: transparent;
  padding: 40px 0px 0px 0px;
}

.c1 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c9 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c10 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c11 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c3 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  margin-top: -2px;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  padding-right: 12px;
}

<div
    aria-expanded={false}
    className="c0 c1"
  >
    <h3
      className="c2"
    >
      <button
        className="c3"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      >
        This accordion item has a custom top padding
        <div
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="c5"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 12 12"
          >
            <path
              d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </h3>
  </div>,
  .c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #336BFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c7 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c8 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c9 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c1 {
  outline: 1px solid none;
  background-color: transparent;
  padding: 0px 0px 40px 0px;
}

.c1 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c10 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c11 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c3 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  margin-top: -2px;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  padding-right: 12px;
}

<div
    aria-expanded={false}
    className="c0 c1"
  >
    <h3
      className="c2"
    >
      <button
        className="c3"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      >
        This accordion item has a custom bottom padding
        <div
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="c5"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 12 12"
          >
            <path
              d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </h3>
  </div>,
  .c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #336BFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c7 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c8 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c9 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c10 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c1 {
  outline: 1px solid none;
  background-color: transparent;
  padding: 0px 0px 0px 80px;
}

.c1 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c11 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c3 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  margin-top: -2px;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  padding-right: 12px;
}

<div
    aria-expanded={false}
    className="c0 c1"
  >
    <h3
      className="c2"
    >
      <button
        className="c3"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      >
        This accordion item has a custom left padding
        <div
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="c5"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 12 12"
          >
            <path
              d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </h3>
  </div>,
  .c5 {
  color: #282823;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c8 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c9 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c10 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c11 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c12 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c1 {
  outline: 1px solid none;
  background-color: transparent;
  padding: 0px 80px 0px 0px;
}

.c1 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c3 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: pointer;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  margin-top: 0;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  padding-right: 0px;
}

.c6 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
}

<div
    aria-expanded={false}
    className="c0 c1"
  >
    <h3
      className="c2"
    >
      <button
        className="c3"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        type="button"
      >
        This accordion item has a custom right padding and chevron to demonstrate
        <div
          className="c4"
        >
          <svg
            aria-hidden="true"
            className="c5 c6"
            focusable="false"
            height={8}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={8}
          >
            <path
              d="M8 7.418l-4-4-4 4V4.59l4-4 4 4v2.828z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
    </h3>
  </div>,
]
`;

exports[`Storyshots Molecules / AccordionItem With Disabled Background Color 1`] = `
.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #336BFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  outline: 1px solid none;
  background-color: transparent;
  padding: 0px 0px 0px 0px;
}

.c1 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c3 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  margin-top: -2px;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  padding-right: 12px;
}

<div
  aria-expanded={false}
  className="c0 c1"
>
  <h3
    className="c2"
  >
    <button
      className="c3"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      type="button"
    >
      This card has its hover and focus color disabled
      <div
        className="c4"
      >
        <svg
          aria-hidden="true"
          className="c5"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 12 12"
        >
          <path
            d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </button>
  </h3>
</div>
`;

exports[`Storyshots Molecules / AccordionItem With Styled Content 1`] = `
.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 12px;
  height: 12px;
  fill: #336BFF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  outline: 1px solid none;
  background-color: transparent;
  padding: 0px 0px 0px 0px;
}

.c1 + .c0 {
  border-top: 1px solid #EBEBE8;
}

.c3 {
  font: inherit;
  width: 100%;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  background-color: transparent;
  padding: 12px 0;
  cursor: pointer;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  margin-top: -2px;
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  padding-right: 12px;
}

<div
  aria-expanded={false}
  className="c0 c1 "
>
  <h3
    className="c2"
  >
    <button
      className="c3"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      type="button"
    >
      Sustainability score
      <div
        className="c4"
      >
        <svg
          aria-hidden="true"
          className="c5"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 12 12"
        >
          <path
            d="M7.166 0v5h5v2h-5v5h-2V6.999L.166 7V5l5-.001V0h2z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </button>
  </h3>
</div>
`;
